--- a/AugmentedRealityGo/AugmentedRealityGo.vcxproj.filters
+++ b/AugmentedRealityGo/AugmentedRealityGo.vcxproj.filters
@@ -18,9 +18,6 @@
     <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="GoARdrawingutils.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="ARGoController.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -57,6 +54,12 @@
     <ClCompile Include="GamePlayUtils\GoAssistantController.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="HelperClass\GoARdrawingutils.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="HelperClass\config.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="ClassDiagram1.cd" />
@@ -67,9 +70,6 @@
     <None Include="app.config" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="GoARdrawingutils.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="ARGoController.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -103,13 +103,19 @@
     <ClInclude Include="GamePlayUtils\FuegoAssistant.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="GamePlayUtils\GoAssistantController.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="HelperClass\GoARdrawingutils.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="HelperClass\Helper.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
     <ClInclude Include="GamePlayUtils\GameConstant.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="GamePlayUtils\Helper.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="GamePlayUtils\GoAssistantController.h">
+    <ClInclude Include="HelperClass\config.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
